[package]
name = "ansimage"
version = "0.1.5"
edition = "2024"
description = "Converting images into colorful terminal ANSI art."
keywords = ["image", "terminal", "ansi", "art", "ascii-art"]
categories = [
    "command-line-utilities",
    "multimedia::images",
    "visualization",
    "graphics",
    "value-formatting",
]
authors = ["Cody Wyatt Neiman (xangelix) <neiman@cody.to>"]
license = "MIT"
documentation = "https://docs.rs/ansimage"
repository = "https://github.com/xangelix/ansimage"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
fast_image_resize = "5.4.0"
image = "0.25.9"
imagequant = "4.4.1"
owo-colors = "4.2.3"
palette = { version = "0.7.6", features = ["serializing"] }
rayon = "1.11.0"
thiserror = "2.0.17"

[[bin]]
name = "ansimage"
path = "src/bin/main.rs"
